FullSb1-27-apr-15/src/objects/FinanceTransactionControl__c.object
<CustomObject>
    <fields>
        <fullName>FinanceTransactionEvent__c</fullName>
        <label>FinanceTransactionEvent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceTransactionType__c</fullName>
        <label>FinanceTransactionType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceTransaction__c</fullName>
        <label>Finance Transaction</label>
        <referenceTo>Finance_Transactions__c</referenceTo>
        <relationshipLabel>FinanceTransactionControls</relationshipLabel>
        <relationshipName>FinanceTransactionControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <label>Finance</label>
        <referenceTo>Opportunity_Finance__c</referenceTo>
        <relationshipLabel>FinanceTransactionControls</relationshipLabel>
        <relationshipName>FinanceTransactionControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>FinanceTransactionControls</relationshipLabel>
        <relationshipName>FinanceTransactionControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FinanceTransactionControl</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FinanceTransaction__c</columns>
        <columns>Finance__c</columns>
        <columns>Journal__c</columns>
        <columns>FinanceTransactionEvent__c</columns>
        <columns>FinanceTransactionType__c</columns>
        <columns>State__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Application_Fee</fullName>
        <columns>NAME</columns>
        <columns>FinanceTransaction__c</columns>
        <columns>FinanceTransactionEvent__c</columns>
        <columns>FinanceTransactionType__c</columns>
        <columns>State__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Finance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinanceTransactionType__c</field>
            <operation>equals</operation>
            <value>Application Fee</value>
        </filters>
        <label>Application Fee</label>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>FinanceTransaction__c</columns>
        <columns>Finance__c</columns>
        <columns>FinanceTransactionEvent__c</columns>
        <columns>FinanceTransactionType__c</columns>
        <columns>State__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <nameField>
        <displayFormat>FTC-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FinanceTransactionControls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>